[package]
name = "raft-kv"
version = "0.1.0"
edition = "2024"

[dependencies]
# The Consensus Logic
protobuf = "3"  # Needed by raft-rs

# The Network & Async Runtime
tokio = { version = "1", features = ["full"] }
tonic = "0.12"  # gRPC implementation
prost = "0.13"  # Protobuf serializer

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] } # CLI argument parsing
bytes = "1.0" # Helpful for handling raw data
rand = "0.8" # Random number generation

[build-dependencies]
tonic-build = "0.12"

