[package]
name = "raft_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
rand = "0.8"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"